app/assets/stylesheets/components/_card-recipe-index.scss
//recipe-index-cards

.recipe-cards-grid {
  display: grid;
  grid-template-columns: 1fr;
  flex-grow: 1;
  grid-gap: 8px;
  margin: 8px;
  margin-top: 0;
}

.recipe-cards {
  position: relative;
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 24px;
  font-family: $headers-font;
}

.recipe-cards-photo{
  height: 200px;
  width: 100%;
  border-radius: 24px 24px 0px 0px;
  object-fit: cover;
  object-position: center;
}

.recipe-cards-body{
  height: 100%;
  padding: 16px 12px 12px 12px;
  vertical-align: middle;

}

.recipe-cards-title{
  text-align: center;
  h6 {
    margin-bottom: 0;

  }
  a {
    color: $bright-mint;
    text-decoration: none;
    background-color: transparent;
  }
}

